Henter resource-filer fra inne i jar-fil (q og p) må gjøres slik